--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,18 @@
 #clock {
-  background-color: burlywood;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(188, 188, 188, 0.2);
   width: 500px;
   height: 500px;
   border-radius: 50%;
   position: relative;
+  border: 10px solid rgba(0, 0, 0, 1);
+}
+
+body {
+  background-color: rgb(255, 255, 255);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .number {
@@ -12,7 +20,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  font-size: 22px;
+  font-size: 36px;
 }
 
 .handle {
@@ -44,6 +52,18 @@
   width: 1px;
   height: 220px;
   background-color: black;
+  display: none;
+}
+
+.handle__center {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .number:nth-of-type(1) {
